# libbluray

./: CMakeLists.txt  configure.ac
src/file/: dirs_win32.c
src/libbluray/: bluray.c  bluray.h
src/libbluray/bdj/: bdj.c
src/libbluray/bdj/native/: java_awt_BDFontMetrics.c
